fix:swag:get with body
