# service/gateway/handler/user/getProfile.go
@@ -49,7 +49,6 @@ func GetUserProfile(id uint32) (*UserProfile, error) {
 // @Produce  application/json
 // @Param id path int true "user_id"
 // @Param Authorization header string true "token 用户令牌"
-// @Param object body GetProfileRequest  true "get_profile_request"
 // @Success 200 {object} UserProfile
 // @Failure 401 {object} handler.Response
 // @Failure 500 {object} handler.Response
